Make top site section - mobile

--- a/src/sass/global/_vars.scss
+++ b/src/sass/global/_vars.scss
@@ -1,7 +1,8 @@
 // define your variables here
-// $primary-color: #354a9e;
+$green: #709c54;
 
-// $heading-color-dark: $primary-color;
+$text-color-primary: #212121;
+$text-color-secondary: #1c1c1c;
 
 $tablet-width: 768px;
 $desktop-width: 1440px;
