--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,13 @@
 @import 'global/fonts';
 @import 'global/global';
 @import 'global/wrapper';
+@import 'global/container';
 @import 'global/visually-hidden';
+
+@import 'blocks/logo';
+@import 'blocks/site-top';
+@import 'blocks/nav';
+@import 'blocks/close-menu';
+@import 'blocks/header';
+@import 'blocks/open-menu';
+@import 'blocks/intro';
