--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -11,7 +11,9 @@ html {
 
 body {
   min-width: 320px;
+  margin: 0;
   font-family: source-serif-pro, serif;
+  background-color: #282828;
 }
 
 a {
