--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,5 @@
 @import 'blocks/header';
 @import 'blocks/open-menu';
 @import 'blocks/intro';
+@import 'blocks/phone';
+@import 'blocks/top-soc';
