--- a/src/sass/blocks/_intro.scss
+++ b/src/sass/blocks/_intro.scss
@@ -1,15 +1,31 @@
 .intro {
-  padding: 130px 0;
+  padding: 130px 0 50px;
   color: #fff;
+
+  @include tablet {
+    max-width: 310px;
+    padding-top: 250px;
+    color: #000;
+  }
 
   &__title {
     padding: 21px 0 10px;
+
+    @include tablet {
+      padding: 30px 0 25px;
+      font-size: 36px;
+    }
   }
 
   &__text {
     padding: 4px 35px 20px 0;
     font-size: 14px;
     font-weight: 300;
+
+    @include tablet {
+      padding: 10px 55px 25px 0;
+      font-size: 16px;
+    }
   }
 
   &__link {
@@ -24,6 +40,11 @@
     letter-spacing: 2px;
     text-transform: uppercase;
 
+    @include tablet {
+      border-bottom-color: #000;
+      font-size: 16px;
+    }
+
     &::after {
       content: '';
       position: absolute;
@@ -33,6 +54,10 @@
       width: 27px;
       height: 2px;
       background-color: #fff;
+
+      @include tablet {
+        background-color: #000;
+      }
     }
   }
 }
