--- a/src/sass/blocks/_site-top.scss
+++ b/src/sass/blocks/_site-top.scss
@@ -1,11 +1,29 @@
 .site-top {
   min-height: 480px;
-  background-image: url('../img/hero@1x.jpg');
+  background-image: url('../img/hero-mobile@1x.jpg');
   background-position: 0 0;
   background-repeat: no-repeat;
 
   @include retina {
-    background-image: url('../img/hero@2x.jpg');
+    background-image: url('../img/hero-mobile@2x.jpg');
     background-size: 320px 480px;
+  }
+
+  @include tablet {
+    min-height: 823px;
+    background-image: url('../img/hero-tablet@1x.jpg'),
+      url('../img/site-top-bg-tablet@1x.jpg');
+    background-position: top 162px right 51px, top 0 right 0;
+    background-repeat: no-repeat;
+
+    @include retina {
+      background-image: url('../img/hero-tablet@2x.jpg'),
+        url('../img/site-top-bg-tablet@2x.jpg');
+      background-size: 327px 499px, 308px 823px;
+    }
+  }
+
+  &__intro {
+    margin-bottom: 150px;
   }
 }
