Make top site section - desktop

--- a/src/sass/blocks/_close-menu.scss
+++ b/src/sass/blocks/_close-menu.scss
@@ -9,6 +9,10 @@
   border: none;
   background-color: transparent;
 
+  @include desktop {
+    display: none;
+  }
+
   &::before,
   &::after {
     content: '';
