--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,3 +1,14 @@
 .header {
   position: relative;
+
+  @include desktop {
+    display: flex;
+    align-items: center;
+  }
+
+  &__logo {
+    @include desktop {
+      margin-right: 60px;
+    }
+  }
 }
