--- a/src/sass/blocks/_phone.scss
+++ b/src/sass/blocks/_phone.scss
@@ -1,9 +1,20 @@
 .phone {
   position: relative;
   bottom: 22px;
-  display: inline-block;
+  display: none;
   margin-left: 305px;
   font-size: 18px;
   font-weight: 600;
   color: #3b3b3b;
+
+  @include tablet {
+    display: inline-block;
+  }
+
+  @include desktop {
+    position: static;
+    bottom: auto;
+    margin-left: 240px;
+    color: rgba($text-color-primary-rgb, 0.6);
+  }
 }
