--- a/src/sass/blocks/_site-top.scss
+++ b/src/sass/blocks/_site-top.scss
@@ -1,5 +1,6 @@
 .site-top {
   min-height: 480px;
+  background-color: #f8f8f8;
   background-image: url('../img/hero-mobile@1x.jpg');
   background-position: 0 0;
   background-repeat: no-repeat;
@@ -23,7 +24,29 @@
     }
   }
 
+  @include desktop {
+    position: relative;
+    min-height: 780px;
+    background-image: url('../img/hero-desktop@1x.jpg'),
+      url('../img/site-top-bg-desktop@1x.png');
+    background-position: top 159px right 433px, top 0 right 0;
+    background-repeat: no-repeat;
+
+    @include retina {
+      background-image: url('../img/hero-desktop@2x.jpg'),
+        url('../img/site-top-bg-desktop@2x.png');
+      background-size: 348px 533px, 685px 780px;
+    }
+  }
+
   &__intro {
     margin-bottom: 150px;
+  }
+
+  &__position {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
   }
 }
