--- a/src/sass/blocks/_top-soc.scss
+++ b/src/sass/blocks/_top-soc.scss
@@ -11,5 +11,9 @@
     font-weight: 300;
     color: $text-color-primary;
     text-transform: uppercase;
+
+    @include desktop {
+      font-size: 14px;
+    }
   }
 }
