--- a/src/sass/global/_vars.scss
+++ b/src/sass/global/_vars.scss
@@ -2,6 +2,7 @@
 $green: #709c54;
 
 $text-color-primary: #212121;
+$text-color-primary-rgb: rgb(21, 21, 21);
 $text-color-secondary: #1c1c1c;
 
 $tablet-width: 768px;
