Make portfolio section - mobile

--- a/src/sass/global/_vars.scss
+++ b/src/sass/global/_vars.scss
@@ -4,6 +4,7 @@ $green: #709c54;
 $text-color-primary: #212121;
 $text-color-primary-rgb: rgb(21, 21, 21);
 $text-color-secondary: #1c1c1c;
+$title-stick-color: #d7b0bc;
 
 $tablet-width: 768px;
 $desktop-width: 1440px;
