--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,3 +17,7 @@
 @import 'blocks/phone';
 @import 'blocks/top-soc';
 @import 'blocks/position';
+@import 'blocks/section';
+@import 'blocks/works';
+@import 'blocks/work-item';
+@import 'blocks/portfolio-details';
