--- a/src/sass/blocks/_site-top.scss
+++ b/src/sass/blocks/_site-top.scss
@@ -1,5 +1,6 @@
 .site-top {
   min-height: 480px;
+  margin-bottom: 40px;
   background-color: #f8f8f8;
   background-image: url('../img/hero-mobile@1x.jpg');
   background-position: 0 0;
