--- a/src/sass/global/_wrapper.scss
+++ b/src/sass/global/_wrapper.scss
@@ -4,6 +4,8 @@
   margin: 0 auto;
   background-color: #fff;
 
+  // box-shadow: 0 0 10px 0px rgba(0,0,0,0.3); // try it
+
   @include tablet {
     width: $tablet-width;
   }
