--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,4 +20,5 @@
 @import 'blocks/section';
 @import 'blocks/works';
 @import 'blocks/work-item';
+@import 'blocks/portfolio';
 @import 'blocks/portfolio-details';
