--- a/src/sass/global/_global.scss
+++ b/src/sass/global/_global.scss
@@ -14,6 +14,8 @@ body {
   margin: 0;
   font-family: source-serif-pro, serif;
   background-color: #282828;
+
+  // background-color: #eee; // try it
 }
 
 a {
