--- a/src/sass/global/_vars.scss
+++ b/src/sass/global/_vars.scss
@@ -1,5 +1,6 @@
 // define your variables here
 $green: #709c54;
+$pink: #cb98a8;
 
 $text-color-primary: #212121;
 $text-color-primary-rgb: rgb(21, 21, 21);
