--- a/src/sass/blocks/_work-item.scss
+++ b/src/sass/blocks/_work-item.scss
@@ -1,6 +1,10 @@
 .work-item {
   padding-bottom: 50px;
 
+  @include desktop {
+    padding-bottom: 70px;
+  }
+
   &__picture {
     display: block;
     margin-bottom: 15px;
@@ -16,6 +20,10 @@
     font-weight: 300;
     color: rgba($text-color-primary-rgb, 0.6);
     text-transform: uppercase;
+
+    @include desktop {
+      font-size: 14px;
+    }
   }
 
   &__title {
@@ -26,6 +34,10 @@
 
     @include tablet {
       font-size: 16px;
+    }
+
+    @include desktop {
+      font-size: 20px;
     }
   }
 }
