--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -25,6 +25,6 @@
     position: absolute;
     top: calc(50% - 250px);
     right: -35px;
-    transform: translateY(-50%);
+    transform: translateY(-50%) rotate(90deg);
   }
 }
