Make price section - mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,3 +24,5 @@
 @import 'blocks/portfolio-details';
 @import 'blocks/side-soc';
 @import 'blocks/about';
+@import 'blocks/plans';
+@import 'blocks/plan-item';
