--- a/src/sass/blocks/_plan-item.scss
+++ b/src/sass/blocks/_plan-item.scss
@@ -10,6 +10,11 @@
     flex-direction: column;
     padding: 15px 50px;
     color: $green;
+
+    @include tablet {
+      padding-right: 22px;
+      padding-left: 22px;
+    }
   }
 
   &__title-hours {
@@ -24,5 +29,13 @@
     font-size: 16px;
     color: $text-color-primary;
     text-align: center;
+
+    @include tablet {
+      font-size: 14px;
+    }
+  }
+
+  &__image {
+    max-width: none;
   }
 }
