--- a/src/sass/blocks/_plan-item.scss
+++ b/src/sass/blocks/_plan-item.scss
@@ -15,14 +15,26 @@
       padding-right: 22px;
       padding-left: 22px;
     }
+
+    @include desktop {
+      padding: 25px 80px;
+    }
   }
 
   &__title-hours {
     margin-right: auto;
+
+    @include desktop {
+      font-size: 24px;
+    }
   }
 
   &__title-price {
     margin-left: auto;
+
+    @include desktop {
+      font-size: 18px;
+    }
   }
 
   &__list {
@@ -32,6 +44,10 @@
 
     @include tablet {
       font-size: 14px;
+    }
+
+    @include desktop {
+      font-size: 18px;
     }
   }
 
