--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -5,4 +5,34 @@
     background-size: 28px 24px;
     background-position: top 10px right 280px;
   }
+
+  @include desktop {
+    position: relative;
+    background-image: url('../img/leaf-4.png'), url('../img/leaf-2.png'),
+      url('../img/leaf-1.png'), url('../img/price-bg-desktop@1x.png');
+    background-position: bottom 0 right 130px, top 175px left 130px,
+      top 25px right 506px, top 570px left 0;
+    background-size: 65px 53px, 46px 46px, 28px 24px, 1440px 441px;
+    background-repeat: no-repeat;
+
+    @include retina {
+      background-image: url('../img/leaf-4.png'), url('../img/leaf-2.png'),
+        url('../img/leaf-1.png'), url('../img/price-bg-desktop@2x.png');
+      background-size: 1440px 441px;
+    }
+  }
+
+  &__position {
+    position: absolute;
+    top: 50%;
+    left: 35px;
+    transform: translateY(-50%);
+  }
+
+  &__side-soc {
+    position: absolute;
+    top: 50%;
+    right: -35px;
+    transform: translateY(-50%) rotate(90deg);
+  }
 }
