Make footer - mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,3 +27,5 @@
 @import 'blocks/plans';
 @import 'blocks/plan-item';
 @import 'blocks/price';
+@import 'blocks/social';
+@import 'blocks/contact-item';
