--- a/src/sass/blocks/_plan-item.scss
+++ b/src/sass/blocks/_plan-item.scss
@@ -1,6 +1,10 @@
 .plan-item {
   padding-bottom: 70px;
 
+  @include tablet {
+    padding-bottom: 0;
+  }
+
   &--last {
     padding-bottom: 0;
   }
