--- a/src/sass/blocks/_nav.scss
+++ b/src/sass/blocks/_nav.scss
@@ -9,8 +9,8 @@
   width: 0;
   height: 100vh;
   background-color: #fff;
+  background-image: url('../img/site-bg.jpg');
   opacity: 0;
-  // transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   transition: all 0.3s;
 
   &--visible {
@@ -19,10 +19,11 @@
   }
 
   @include tablet {
-    background-image: url('../img/leaf-1.png'), url('../img/leaf-2.png');
+    background-image: url('../img/leaf-1.png'), url('../img/leaf-2.png'),
+      url('../img/site-bg.jpg');
     background-position: top 95px right 205px, left 105px bottom 175px;
-    background-size: 28px 24px, 46px 46px;
-    background-repeat: no-repeat;
+    background-size: 28px 24px, 46px 46px, 150px 150px;
+    background-repeat: no-repeat, no-repeat, repeat;
   }
 
   @include desktop {
