--- a/src/sass/global/_wrapper.scss
+++ b/src/sass/global/_wrapper.scss
@@ -3,6 +3,7 @@
   width: 320px;
   margin: 0 auto;
   background-color: #fff;
+  background-image: url('../img/site-bg.jpg');
 
   // box-shadow: 0 0 10px 0px rgba(0,0,0,0.3); // try it
 
