--- a/src/sass/blocks/_phone.scss
+++ b/src/sass/blocks/_phone.scss
@@ -16,5 +16,10 @@
     bottom: auto;
     margin-left: 240px;
     color: rgba($text-color-primary-rgb, 0.6);
+    transition: 0.2s;
+
+    &:hover {
+      color: $green;
+    }
   }
 }
