--- a/src/sass/blocks/_intro.scss
+++ b/src/sass/blocks/_intro.scss
@@ -60,6 +60,19 @@
       font-size: 16px;
     }
 
+    @include desktop {
+      transition: 0.2s;
+
+      &:hover {
+        color: $green;
+        border-bottom-color: $green;
+
+        &::after {
+          background-color: $green;
+        }
+      }
+    }
+
     &::after {
       content: '';
       position: absolute;
@@ -72,6 +85,10 @@
 
       @include tablet {
         background-color: #000;
+      }
+
+      @include desktop {
+        transition: 0.2s;
       }
     }
   }
