--- a/src/sass/blocks/_nav.scss
+++ b/src/sass/blocks/_nav.scss
@@ -86,6 +86,12 @@
       font-size: 18px;
       font-weight: 400;
       color: rgba($text-color-primary-rgb, 0.6);
+      transition: 0.2s;
+
+      &:hover {
+        color: $green;
+        text-shadow: 0 1px 1px black;
+      }
     }
   }
 }
