--- a/src/sass/blocks/_site-top.scss
+++ b/src/sass/blocks/_site-top.scss
@@ -31,13 +31,13 @@
     position: relative;
     min-height: 780px;
     background-image: url('../img/hero-desktop@1x.jpg'),
-      url('../img/site-top-bg-desktop@1x.png');
+      url('../img/site-top-bg-desktop@1x.png'), url('../img/site-bg.jpg');
     background-position: top 159px right 433px, top 0 right 0;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat, no-repeat, repeat;
 
     @include retina {
       background-image: url('../img/hero-desktop@2x.jpg'),
-        url('../img/site-top-bg-desktop@2x.png');
+        url('../img/site-top-bg-desktop@2x.png'), url('../img/site-bg.jpg');
       background-size: 348px 533px, 685px 780px;
     }
   }
