--- a/src/sass/blocks/_top-soc.scss
+++ b/src/sass/blocks/_top-soc.scss
@@ -14,6 +14,11 @@
 
     @include desktop {
       font-size: 14px;
+      transition: 0.2s;
+
+      &:hover {
+        color: $green;
+      }
     }
   }
 }
