--- a/src/sass/blocks/_position.scss
+++ b/src/sass/blocks/_position.scss
@@ -8,14 +8,45 @@
 
   &__item {
     width: 11px;
-    padding-bottom: 10px;
     margin-bottom: 37px;
-    border-bottom: 1px solid #c8c8c8;
+    border-bottom: 2px solid #c8c8c8;
     text-align: center;
+
+    @include desktop {
+      transition-property: width;
+      transition-duration: 400ms;
+      transition-delay: 300ms;
+
+      &:hover {
+        width: 37px;
+        border-bottom: 2px solid #000;
+
+        .position__link {
+          visibility: visible;
+        }
+      }
+    }
 
     &--current {
       width: 37px;
       border-bottom: 2px solid #000;
+    }
+  }
+
+  &__link {
+    display: inline-block;
+    padding-bottom: 10px;
+    visibility: hidden;
+    transition-property: visibility;
+    transition-duration: 400ms;
+    transition-delay: 300ms;
+
+    &:hover {
+      visibility: visible;
+    }
+
+    &--current {
+      visibility: visible;
     }
   }
 }
